--- a/assets/stylesheets/style-home.css
+++ b/assets/stylesheets/style-home.css
@@ -11,3 +11,5 @@
 @import url(bundle.css);       /* otomatik tamamlama */
 @import url(label.css);        /* etiketler */
 @import url(datatable.css);        /* etiketler */
+@import url(dashboard.css);
+@import url(meio.css);
